--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
             task: '✅',
             quote: '💬',
             tip: '🎯',
-            challenge: '🏆'
+            challenge: '🏆',
+            viaggi: '🧳',
+            cuore: '❤️',
+            mangiare: '🍴',
+            attività: '🎯'
         };
 
         // Funzione di seed per il generatore random basato sul timestamp
