remove item in instructions

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><strong>Scegli le card</strong> ogni settimana o ogni mese e portale a termine secondo i tuoi tempi. Per alcune card avrai bisogno di pianificazione, in quel caso l'attività si considera completata in due step.</li>
             <li><strong>Interpreta le card</strong> e adattale alla tua personalità e alle tue esigenze. Niente è obbligatorio. </li>
             <li><strong>Ricarica la pagina</strong> per ottenere una nuova combinazione casuale iniziale</li>
-            <li><strong>Nuove idee</strong> da aggiungere caricando un file <em>cards.csv</em></li>
+            <!--li><strong>Nuove idee</strong> da aggiungere caricando un file <em>cards.csv</em></li-->
         </ul>
         <p class="instructions" style="margin-top: 20px; text-align: center; font-style: italic;">
             💡 Ogni volta che apri l'app, le card iniziali saranno diverse!
