--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><strong>Clicca su una card</strong> per pescarne una nuova dal mazzo in modo casuale. Se non ti convince o non ti piace clicca ancora.</li>
             <li><strong>Scegli le card</strong> ogni settimana o ogni mese e portale a termine secondo i tuoi tempi. Per alcune card avrai bisogno di pianificazione, in quel caso l'attività si considera completata in due step.</li>
             <li><strong>Interpreta le card</strong> e adattale alla tua personalità e alle tue esigenze. Niente è obbligatorio. </li>
-            <li><strong>Ricarica la pagina</strong> per ottenere una nuova combinazione casuale iniziale.</li>
+            <!--li><strong>Ricarica la pagina</strong> per ottenere una nuova combinazione casuale iniziale.</li-->
             <!--li><strong>Nuove idee</strong> da aggiungere caricando un file <em>cards.csv</em></li-->
         </ul>
         <p class="instructions" style="margin-top: 20px; text-align: center; font-style: italic;">
